restrict zcompdump ignore to a single file

--- a/.gitignore
+++ b/.gitignore
@@ -108,12 +108,7 @@
 /.yosys_history
 /.yosys_show.dot
 /.yosys_show.dot.pid
-/.zcompdump-mbp15-5.0.8
-/.zcompdump-mbp15-5.2
-/.zcompdump-mbp15-5.3
-/.zcompdump-meld-5.7.1
-/.zcompdump-rinat-5.3
-/.zcompdump-rinat-5.7.1
+/.zcompdump
 /.zsh-update
 /.zsh_history
 /.zshrc.backup
