Tmux keybinding to toggle status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,10 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+set-option -g mouse on
+
+# toggle statusbar
+bind-key b set-option status
 
 
 # reload config file (change file location to your the tmux.conf you want to use)
