Add tmux cheats

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,10 @@
+# TMUX cheat-sheet
+# connect to a main named session (attaching, if exists and detaching all clients)
+# tmux new-session -A -s main -D
+# Create a new window: prefix + c
+# switch between windows: prefix + 0-9
+
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
