--- a/.gitconfig
+++ b/.gitconfig
@@ -25,10 +25,10 @@
     #   la = all commits, all reachable refs
     head = !git r -1
     h = !git head
-    hp = "!. ~/.githelpers && show_git_head"
+    hp = "!. ~/bin/githelpers && show_git_head"
     r = !GIT_NO_PAGER=1 git l -20
     ra = !git r --all
-    l = "!. ~/.githelpers && pretty_git_log"
+    l = "!. ~/bin/githelpers && pretty_git_log"
     la = !git l --all
 [color]
 	branch = auto
